  correct position)
* api: add new function "string_eval_expression"
* api: connect with IPv6 by default in hook_connect (with fallback to IPv4),
  shuffle list of hosts for a same address, add argument "retry" for
  hook_connect, move "sock" from hook_connect arguments to callback of
  hook_connect (task #11205)
* aspell: add bar item "aspell_dict" (dictionary used on current buffer)
* irc: add option irc.network.whois_double_nick to double nick in command /whois
* irc: send whois on self nick when /whois is done without argument on a channel
  (task #12273)
* irc: remove local variable "away" in server/channels buffers after server
  disconnection (bug #37582)
* irc: add option "-noswitch" for command /join (task #12275)
* irc: fix crash when message 352 has too few arguments (bug #37513)
* irc: remove unneeded server disconnect when server buffer is closed and server
  is already disconnected
* relay: add support of IPv6, new option relay.network.ipv6, add support of
  "ipv4." and/or "ipv6." before protocol name, to force IPv4/IPv6 (task #12270)
* relay: add missing "ssl." in output of /relay listrelay
* script: fix compilation on OS X

Version 0.3.9 (2012-09-29)
--------------------------

* core: move the set of cmake policy CMP0003 in directory src (so it applies to
  all plugins) (bug #37311)
* core: add signals for plugins loaded/unloaded
* core: add default key alt+"x" (zoom on merged buffer) (task #11029)
* core: fix display bug when end of a line is displayed on top of chat (last
  line truncated and MORE(0) in status bar) (bug #37203)
* core: fix IP address returned by hook_connect (return IP really used, not
  first IP for hostname)
* core: display spaces at the end of messages in chat area (bug #37024)
* core: fix infinite loop in display when chat area has width of 1 with
  a bar displayed on the right (nicklist by default) (bug #37089)
* core: fix display of "bar more down" char when text is truncated by size_max