@@ -149,6 +149,7 @@ extern struct t_config_option *irc_config_color_reason_quit;
 extern struct t_config_option *irc_config_color_topic_old;
 extern struct t_config_option *irc_config_color_topic_new;
 
+extern struct t_config_option *irc_config_network_alternate_nick;
 extern struct t_config_option *irc_config_network_autoreconnect_delay_growing;
 extern struct t_config_option *irc_config_network_autoreconnect_delay_max;
 extern struct t_config_option *irc_config_network_colors_receive;
