@@ -23,6 +23,8 @@ Version 0.4.0 (under dev!)
   hook_connect, move "sock" from hook_connect arguments to callback of
   hook_connect (task #11205)
 * aspell: add bar item "aspell_dict" (dictionary used on current buffer)
+* irc: add option irc.network.alternate_nick to disable dynamic nick generation
+  when all nicks are already in use on server (task #12281)
 * irc: add option irc.network.whois_double_nick to double nick in command /whois
 * irc: send whois on self nick when /whois is done without argument on a channel
   (task #12273)
